--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,5 +51,38 @@ body {
 .intro {
     text-align: center;
     color:black;
-    margin: 200px;
+    margin: 10%;
 }
+
+.questions-container {
+    display: flex;
+    flex-direction: column;
+}
+.start {
+    outline: none;
+    border: none;
+    display: inline-block;
+    padding: 10px 15px;
+    background: var(--primary);
+    font-size: 2.0rem;
+    border-radius: 12px;
+    position: relative;
+    top: -3px;
+    box-shadow: 0 3px var(--grey);
+    color:black;
+
+    padding: 5px 7px;
+    margin: 2% 37%;
+    background: var(--secondary);
+    color: #fff;
+    
+}
+
+.start:hover {
+    box-shadow: 0 2px var(--grey);
+    top: -2px;
+  }
+.start:active {
+    box-shadow: 0 0px var(--grey);
+    top: 0;
+  }
