--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,3 +86,22 @@ body {
     box-shadow: 0 0px var(--grey);
     top: 0;
   }
+
+  .btn {
+    outline: none;
+    border: none;
+    display: inline-block;
+    padding: 10px 15px;
+    background: var(--primary);
+    font-size: 2.0rem;
+    border-radius: 12px;
+    position: relative;
+    top: -3px;
+    box-shadow: 0 3px var(--grey);
+    color:black;
+
+    padding: 5px 7px;
+    margin: 1% 25%;
+    background: var(--secondary);
+    color: #fff;
+  }
