--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,3 +105,9 @@ body {
     background: var(--secondary);
     color: #fff;
   }
+
+  .scores {
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+  }
