added end page with input to enter user initials - high scores are now stored in browser and print ontoleaderboard or high Scores page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,3 +161,8 @@ body {
     box-shadow: 0 0px var(--secondary);
     top: 0;
   }
+
+  .initials {
+      width: 75px;
+      margin: 0 auto;
+  }
