--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,10 +122,13 @@ body {
 .user-info {
     display: flex;
     flex-direction: column;
+    background-color: var(--grey);
+    align-items: center;
 
 }
+
 .score {
-    color:black;
+    color:var(--tertiary);
     font-size: 4.0rem;
     text-align: center;
   }
@@ -163,6 +166,31 @@ body {
   }
 
   .initials {
-      width: 75px;
-      margin: 0 auto;
+    outline: none;
+    border: none;
+    padding: 12px;
+    width: 25%;
+    font-size: 1.3rem;
+    border: 2px solid var(--grey);
+    border-radius: 12px; 
+    
+    margin: 4px 35%;
+  }
+  .save-button {
+    outline: none;
+    border: none;
+    display: inline-block;
+    padding: 10px 15px;
+    background: var(--primary);
+    font-size: 1.8rem;
+    border-radius: 12px;
+    position: relative;
+    top: -3px;
+    box-shadow: 0 3px var(--grey);
+    color:black;
+    width: 25%;
+    padding: 5px 7px;
+    margin: 4px 25%;
+    background: var(--secondary);
+    color: #fff;
   }
