--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,13 @@ body {
     color:black;
     margin-right: 50px;
 }
-
+.high-scores {
+    text-decoration: none;
+    font-size: 1.5rem;
+}
+.high-scores:hover {
+    color:var(--grey);
+}
 .intro {
     text-align: center;
     color: var(--tertiary);
@@ -107,17 +113,26 @@ body {
     top: -3px;
     box-shadow: 0 3px var(--grey);
     color:black;
-
+    width: 250px;
     padding: 5px 7px;
-    margin: 1% 25%;
+    margin: 4px auto;
     background: var(--secondary);
     color: #fff;
   }
-
+.btn:hover {
+    box-shadow: 0 2px var(--grey);
+    top: -2px;
+  }
+.btn:active {
+    box-shadow: 0 0px var(--grey);
+    top: 0;
+  }
 .scores {
     text-align: center;
     display: flex;
     flex-direction: column;
+    background-color: var(--grey);
+    color:var(--primary);
   }
 .user-info {
     display: flex;
@@ -126,14 +141,18 @@ body {
     align-items: center;
 
 }
-
+.name {
+    color:var(--tertiary);
+    font-size: 1.5rem;
+    text-align: center;
+}
 .score {
     color:var(--tertiary);
     font-size: 4.0rem;
     text-align: center;
   }
 .progress-text {
-    color: var(--grey);
+    color: var(--tertiary);
     font-size: 3.0rem;
     text-align: center;
 }
@@ -193,4 +212,64 @@ body {
     margin: 4px 25%;
     background: var(--secondary);
     color: #fff;
+  }
+  .save-button:hover {
+    box-shadow: 0 2px var(--grey);
+    top: -2px;
+  }
+    .save-button:active {
+    box-shadow: 0 0px var(--grey);
+    top: 0;
+  }
+
+  .link-buttons {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      margin: 10px;
+  }
+  .link-buttons a {
+      text-decoration: none;
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+
+
+  }
+  .score-list {
+      margin: 10px auto;
+      display:flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+  }
+  .leaderboard-item {
+      text-align: left;
+
+  }
+  .end-btn {
+    outline: none;
+    border: none;
+    display: inline-block;
+    padding: 10px 15px;
+    background: var(--primary);
+    font-size: 1.8rem;
+    border-radius: 12px;
+    position: relative;
+    top: -3px;
+    box-shadow: 0 3px var(--grey);
+    color:black;
+    width: 250px;
+    padding: 5px 7px;
+    margin: 4px auto;
+    background: var(--secondary);
+    color: #fff;
+  }
+  .end-btn:hover {
+    box-shadow: 0 2px var(--grey);
+    top: -2px;
+  }
+.end-btn:active {
+    box-shadow: 0 0px var(--grey);
+    top: 0;
   }
