--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,7 +201,7 @@ body {
     outline: none;
     border: none;
     padding: 12px;
-    width: 25%;
+    width: 300px;
     font-size: 1.3rem;
     border: 2px solid var(--grey);
     border-radius: 12px; 
@@ -220,7 +220,7 @@ body {
     top: -3px;
     box-shadow: 0 3px var(--grey);
     color:black;
-    width: 25%;
+    width: 300px;
     padding: 5px 7px;
     margin: 4px 25%;
     background: var(--secondary);
